better naming of examples

--- a/02Mobjects_Text.ipynb
+++ b/02Mobjects_Text.ipynb
@@ -36,10 +36,12 @@
     "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\"\n",
     "import PIL\n",
     "\n",
+    "cell_counter = 0\n",
     "\n",
     "@register_cell_magic\n",
     "def capture_png(line, cell):\n",
-    "\n",
+    "    global cell_counter\n",
+    "    cell_counter += 1\n",
     "    # init capturing cell output\n",
     "    get_ipython().run_cell_magic(\n",
     "        'capture',\n",
@@ -47,7 +49,11 @@
     "        cell\n",
     "    )\n",
     "    argument_array = line.split('--style')\n",
-    "    path = argument_array[0].strip()\n",
+    "    post_path = argument_array[0].strip()\n",
+    "    chapter_name_underscore = chapter_name.replace(\" \", \"_\")\n",
+    "\n",
+    "    path = f\"gallery_assets/{chapter_name_underscore}_{cell_counter:03}_{post_path}\"\n",
+    "\n",
     "  #  path = path.split(\".png\")[0] + str(time.time_ns()) + \".png\" time stemps not needed\n",
     "    if not path:\n",
     "        raise ValueError('No path found!')\n",
@@ -143,7 +149,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Text1.png\n",
+    "%%capture_png Text1.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -170,7 +176,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Text2.png\n",
+    "%%capture_png Text2.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -197,7 +203,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Underline.png\n",
+    "%%capture_png Underline.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -225,7 +231,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Bold.png\n",
+    "%%capture_png Bold.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -252,7 +258,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/MathTex.png\n",
+    "%%capture_png MathTex.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -279,7 +285,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/MathTex_stix2.png\n",
+    "%%capture_png MathTex_stix2.png\n",
     "%%manim $params\n",
     "\n",
     "class Example(ZoomedScene):\n",
@@ -310,7 +316,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/MathTex2.png\n",
+    "%%capture_png MathTex2.png\n",
     "%%manim $params\n",
     "MathTex.set_default()\n",
     "class Example(ZoomedScene):\n",
@@ -339,7 +345,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Check.png\n",
+    "%%capture_png Check.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
