--- a/03Camera_and_Style.ipynb
+++ b/03Camera_and_Style.ipynb
@@ -35,11 +35,12 @@
     "from manim import *\n",
     "params = f\" -v WARNING -r {80*4},{40*4} -s  --disable_caching Example\"\n",
     "import PIL\n",
-    "\n",
+    "cell_counter = 0\n",
     "\n",
     "@register_cell_magic\n",
     "def capture_png(line, cell):\n",
-    "\n",
+    "    global cell_counter\n",
+    "    cell_counter += 1\n",
     "    # init capturing cell output\n",
     "    get_ipython().run_cell_magic(\n",
     "        'capture',\n",
@@ -47,7 +48,11 @@
     "        cell\n",
     "    )\n",
     "    argument_array = line.split('--style')\n",
-    "    path = argument_array[0].strip()\n",
+    "    post_path = argument_array[0].strip()\n",
+    "    chapter_name_underscore = chapter_name.replace(\" \", \"_\")\n",
+    "\n",
+    "    path = f\"gallery_assets/{chapter_name_underscore}_{cell_counter:03}_{post_path}\"\n",
+    "\n",
     "  #  path = path.split(\".png\")[0] + str(time.time_ns()) + \".png\" time stemps not needed\n",
     "    if not path:\n",
     "        raise ValueError('No path found!')\n",
@@ -121,6 +126,7 @@
     "            image = PIL.Image.open(bytes_io)\n",
     "            image.save(path, 'png')\n",
     "\n",
+    "\n",
     "joson_file_path = \"gallery_assets/gallery_parameters.json\"\n",
     "chapter_name = \"Camera and Style\"\n"
    ]
@@ -143,7 +149,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Background.png\n",
+    "%%capture_png Background.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -171,7 +177,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/ZoomIN.png\n",
+    "%%capture_png ZoomIN.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -200,7 +206,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/ZoomOUT.png\n",
+    "%%capture_png ZoomOUT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -230,7 +236,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/CameraLEFT.png\n",
+    "%%capture_png CameraLEFT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -259,7 +265,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/CameraUP.png\n",
+    "%%capture_png CameraUP.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -288,7 +294,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/MatchHEIGHT.png\n",
+    "%%capture_png MatchHEIGHT.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -316,7 +322,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/MatchWIDTH.png\n",
+    "%%capture_png MatchWIDTH.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -344,7 +350,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/FullScreenRectangle.png\n",
+    "%%capture_png FullScreenRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -370,7 +376,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/SurroundingRectangle.png\n",
+    "%%capture_png SurroundingRectangle.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -398,7 +404,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Dot_set_color_by_gradient.png\n",
+    "%%capture_png Dot_set_color_by_gradient.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -426,7 +432,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Polygon_set_color.png\n",
+    "%%capture_png Polygon_set_color.png\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
