--- a/04Plots.ipynb
+++ b/04Plots.ipynb
@@ -21,11 +21,12 @@
     "scale_res=4\n",
     "params = f\" -v WARNING -r {170*scale_res},{170*scale_res} -s  --disable_caching Example\"\n",
     "import PIL\n",
-    "\n",
+    "cell_counter = 0\n",
     "\n",
     "@register_cell_magic\n",
     "def capture_png(line, cell):\n",
-    "\n",
+    "    global cell_counter\n",
+    "    cell_counter += 1\n",
     "    # init capturing cell output\n",
     "    get_ipython().run_cell_magic(\n",
     "        'capture',\n",
@@ -33,7 +34,11 @@
     "        cell\n",
     "    )\n",
     "    argument_array = line.split('--style')\n",
-    "    path = argument_array[0].strip()\n",
+    "    post_path = argument_array[0].strip()\n",
+    "    chapter_name_underscore = chapter_name.replace(\" \", \"_\")\n",
+    "\n",
+    "    path = f\"gallery_assets/{chapter_name_underscore}_{cell_counter:03}_{post_path}\"\n",
+    "\n",
     "  #  path = path.split(\".png\")[0] + str(time.time_ns()) + \".png\" time stemps not needed\n",
     "    if not path:\n",
     "        raise ValueError('No path found!')\n",
@@ -130,7 +135,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
     "\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
@@ -169,7 +174,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Axes_zoom.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Axes_zoom.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):  \n",
     "    def __init__(self, **kwargs):   #HEREFROM\n",
@@ -225,7 +230,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/ComplexPlane.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png ComplexPlane.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -256,7 +261,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/PolarPlane.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png PolarPlane.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -288,7 +293,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/Graph_with_Number.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Graph_with_Number.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -323,7 +328,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/StreamLines.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png StreamLines.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
@@ -351,7 +356,7 @@
     }
    ],
    "source": [
-    "%%capture_png gallery_assets/ArrowVectorField.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png ArrowVectorField.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim $params\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
