--- a/05using_emojies.ipynb
+++ b/05using_emojies.ipynb
@@ -166,6 +166,7 @@
     "import requests\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "class EmojiImageMobject(ImageMobject):\n",
     "    def __init__(self, emoji, **kwargs):\n",
     "        emoji_code = \"-\".join(f\"{ord(c):x}\" for c in emoji)\n",
@@ -175,15 +176,16 @@
     "        emoji_img = np.array(im.convert(\"RGBA\"))\n",
     "        ImageMobject.__init__(self, emoji_img, **kwargs)\n",
     "\n",
+    "\n",
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = YELLOW_A\n",
     "        em = EmojiImageMobject(\"🐶\").scale(1.1)\n",
     "        # when using OpenEmoji, please give credits e.g. like this:\n",
-    "        #\"All emojis designed by OpenMoji – the open-source emoji and icon project. License: CC BY-SA 4.0\"\n",
+    "        # \"All emojis designed by OpenMoji – the open-source emoji and icon project. License: CC BY-SA 4.0\"\n",
     "        t = Text(\"OpenMoji\").scale(2.5)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.5)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.5)\n",
+    "        self.add(em, t)"
    ]
   },
   {
@@ -212,6 +214,7 @@
     "import urllib.request\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "class EmojiImageMobject(ImageMobject):\n",
     "    def __init__(self, emoji, **kwargs):\n",
     "        emoji_code = \"-\".join(f\"{ord(c):x}\" for c in emoji)\n",
@@ -220,13 +223,14 @@
     "        emoji_img = np.array(im.convert(\"RGBA\"))\n",
     "        ImageMobject.__init__(self, emoji_img, **kwargs)\n",
     "\n",
+    "\n",
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = YELLOW_A\n",
     "        em = EmojiImageMobject(\"🐶\").scale(6)\n",
     "        t = Text(\"Twitter\").scale(4)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.5)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.5)\n",
+    "        self.add(em, t)"
    ]
   },
   {
@@ -257,22 +261,23 @@
     "\n",
     "\n",
     "class EmojiSVGMobject(SVGMobject):\n",
-    "    def __init__(self,emoji, **kwargs):\n",
+    "    def __init__(self, emoji, **kwargs):\n",
     "        emoji_code = \"-\".join(f\"{ord(c):x}\" for c in emoji)\n",
     "        emoji_code = emoji_code.upper()  # <-  needed for openmojis\n",
     "        url = f\"https://raw.githubusercontent.com/hfg-gmuend/openmoji/master/color/svg/{emoji_code}.svg\"\n",
-    "        path_svg  = Path.cwd()  /  f\"{emoji_code}.svg\"\n",
+    "        path_svg = Path.cwd() / f\"{emoji_code}.svg\"\n",
     "        urllib.request.urlretrieve(url, path_svg)\n",
-    "        SVGMobject.__init__(self,str(path_svg), **kwargs)\n",
-    "        path_svg.unlink() #delete downloaded svg again locally\n",
+    "        SVGMobject.__init__(self, str(path_svg), **kwargs)\n",
+    "        path_svg.unlink()  # delete downloaded svg again locally\n",
+    "\n",
     "\n",
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = GREEN_A\n",
     "        em = EmojiSVGMobject(\"🐶\").scale(2.5)\n",
     "        t = Text(\"OpenMoji (SVG)\").scale(2)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.4)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.4)\n",
+    "        self.add(em, t)"
    ]
   },
   {
@@ -303,21 +308,22 @@
     "\n",
     "\n",
     "class EmojiSVGMobject(SVGMobject):\n",
-    "    def __init__(self,emoji, **kwargs):\n",
+    "    def __init__(self, emoji, **kwargs):\n",
     "        emoji_code = \"-\".join(f\"{ord(c):x}\" for c in emoji)\n",
     "        url = f\"https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/{emoji_code}.svg\"\n",
-    "        path_svg  = Path.cwd()  /  f\"{emoji_code}.svg\"\n",
+    "        path_svg = Path.cwd() / f\"{emoji_code}.svg\"\n",
     "        urllib.request.urlretrieve(url, path_svg)\n",
-    "        SVGMobject.__init__(self,str(path_svg), **kwargs)\n",
-    "        path_svg.unlink() #delete downloaded svg again locally\n",
+    "        SVGMobject.__init__(self, str(path_svg), **kwargs)\n",
+    "        path_svg.unlink()  # delete downloaded svg again locally\n",
+    "\n",
     "\n",
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = GREEN_A\n",
     "        em = EmojiSVGMobject(\"🐶\").scale(2.2)\n",
     "        t = Text(\"Twitter (SVG)\").scale(2)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.6)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.6)\n",
+    "        self.add(em, t)"
    ]
   },
   {
@@ -348,21 +354,23 @@
     "\n",
     "\n",
     "class BootstrapSVGMobject(SVGMobject):\n",
-    "    def __init__(self,emoji, color= BLACK, **kwargs):\n",
+    "    def __init__(self, emoji, color=BLACK, **kwargs):\n",
     "        url = f\"https://raw.githubusercontent.com/twbs/icons/main/icons/{emoji}.svg\"\n",
-    "        path_svg  = Path.cwd()  /  f\"{emoji}.svg\"\n",
+    "        path_svg = Path.cwd() / f\"{emoji}.svg\"\n",
     "        urllib.request.urlretrieve(url, path_svg)\n",
-    "        path_svg.write_text(path_svg.read_text().replace('currentColor', color))\n",
-    "        SVGMobject.__init__(self,str(path_svg), **kwargs)\n",
-    "        path_svg.unlink() #delete downloaded svg again locally\n",
+    "        path_svg.write_text(path_svg.read_text().replace(\"currentColor\", color))\n",
+    "        SVGMobject.__init__(self, str(path_svg), **kwargs)\n",
+    "        path_svg.unlink()  # delete downloaded svg again locally\n",
+    "\n",
     "\n",
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = GREEN_A\n",
-    "        em = BootstrapSVGMobject(\"wind\",color=BLACK).scale(2.2) # more at https://icons.getbootstrap.com/\n",
+    "        em = BootstrapSVGMobject(\"wind\", color=BLACK).scale(2.2)\n",
+    "        # more at https://icons.getbootstrap.com/\n",
     "        t = Text(\"Bootstrap (SVG)\").scale(2)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.4)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.4)\n",
+    "        self.add(em, t)"
    ]
   },
   {
@@ -389,10 +397,11 @@
     "class Example1(Scene):\n",
     "    def construct(self):\n",
     "        self.camera.background_color = GREEN_A\n",
-    "        em = BootstrapSVGMobject(\"hourglass-split\",color=BLACK).scale(2.2) # more at https://icons.getbootstrap.com/\n",
+    "        em = BootstrapSVGMobject(\"hourglass-split\", color=BLACK).scale(2.2)\n",
+    "        # more at https://icons.getbootstrap.com/\n",
     "        t = Text(\"Bootstrap (SVG)\").scale(2)\n",
-    "        Group(em,t).arrange(DOWN).scale(1.4)\n",
-    "        self.add(em,t)"
+    "        Group(em, t).arrange(DOWN).scale(1.4)\n",
+    "        self.add(em, t)"
    ]
   },
   {
