update to version 0.16.0

--- a/03Camera_and_Style.ipynb
+++ b/03Camera_and_Style.ipynb
@@ -9,12 +9,12 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.14.0</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.16.0.post0</span>\n",
        "\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m14.0\u001b[0m\n",
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m16.0\u001b[0m\u001b[32m.post0\u001b[0m\n",
        "\n"
       ]
      },
@@ -447,11 +447,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "956ae1017c005de10cf980548dc93247cd70ec3257bcb31b6a6c2783ea7553f4"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13 ('mobject_env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +462,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de09033afffa3f5a46031dc5f1d6210cdd3d8c3b3fb8f394fa15c15d80f85f8a"
+   }
   }
  },
  "nbformat": 4,
