--- a/00cleaning.ipynb
+++ b/00cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,8 @@
     "from IPython.core.magic import register_cell_magic\n",
     "\n",
     "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import PIL\n",
-    "import seaborn as sns\n",
     "\n",
     "def rmtree(f: Path):\n",
     "    if f.is_file():\n",
@@ -53,11 +51,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "deefdb209dc179ecbc880626fece8554a87baca41cae0d7b198759a4c27f783b"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('manimenv2': venv)",
+   "display_name": "Python 3.8.13 ('mobject_env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -71,9 +66,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "de09033afffa3f5a46031dc5f1d6210cdd3d8c3b3fb8f394fa15c15d80f85f8a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
