--- a/html_build.ipynb
+++ b/html_build.ipynb
@@ -33,11 +33,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plywood Gallery v0.0.3\n",
+      "Plywood Gallery v0.0.5\n",
       "Sucessfuly read html_configuration.yaml\n",
       "Sucessfuly created index.html\n",
       "Now you can start crafting your examples with the file gallery.ipynb and see the results in `index.html`!🚪 \n",
-      "Just opening index.html in the browser won't load the interactive parts, so better use `from plywood_gallery import ChapterManager; ChapterManager.open_webpage()` or in VS Code select 'Live Preview: Show Preview' in VSCode to start the page with a server\n"
+      "Just opening index.html in the browser won't load the interactive parts, so better use `from plywood_gallery import open_webpage; open_webpage()` or in VS Code select 'Live Preview: Show Preview' in VSCode to start the page with a server\n"
      ]
     }
    ],
@@ -58,11 +58,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2952ffede85d5ee814e7d7d53bb189c2d6659c3837bb58400800b4ce3939b697"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('plywood_gallery_env': venv)",
+   "display_name": "Python 3.8.13 ('mobject_env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -76,9 +73,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "de09033afffa3f5a46031dc5f1d6210cdd3d8c3b3fb8f394fa15c15d80f85f8a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
