--- a/05using_emojies.ipynb
+++ b/05using_emojies.ipynb
@@ -2,27 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.16.0.post0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m16.0\u001b[0m\u001b[32m.post0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
+    "import json  \n",
     "import time\n",
     "from base64 import b64decode\n",
     "from io import BytesIO, StringIO\n",
@@ -134,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +142,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "from manim import *\n",
     "from PIL import Image\n",
@@ -190,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +189,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "\n",
     "from manim import *\n",
@@ -235,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +234,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "\n",
     "from manim import *\n",
@@ -282,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +281,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "\n",
     "from manim import *\n",
@@ -328,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +327,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "\n",
     "from manim import *\n",
@@ -375,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +374,7 @@
     }
    ],
    "source": [
-    "%%capture_png Axes_e_x.png  --style \"width: 170px; height: auto;\"\n",
+    "%%capture_png Emoji.png  --style \"width: 170px; height: auto;\"\n",
     "%%manim -v WARNING --disable_caching -qm -r400,400 Example1\n",
     "\n",
     "\n",
@@ -403,13 +387,6 @@
     "        Group(em, t).arrange(DOWN).scale(1.4)\n",
     "        self.add(em, t)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
