--- a/00cleaning.ipynb
+++ b/00cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,18 +41,11 @@
     "with open(joson_file_path, \"w\") as jsonFile:\n",
     "    json.dump({}, jsonFile, indent=2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('mobject_env': venv)",
+   "display_name": ".venv11",
    "language": "python",
    "name": "python3"
   },
@@ -66,12 +59,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "de09033afffa3f5a46031dc5f1d6210cdd3d8c3b3fb8f394fa15c15d80f85f8a"
+    "hash": "4f2da1240e0bd584740c51555f65b4a6360ecf1e20d5e328709c04764f187336"
    }
   }
  },
