--- a/01Mobjects_Basics.ipynb
+++ b/01Mobjects_Basics.ipynb
@@ -9,12 +9,12 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.16.0.post0</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.1</span>\n",
        "\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m16.0\u001b[0m\u001b[32m.post0\u001b[0m\n",
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.1\u001b[0m\n",
        "\n"
       ]
      },
@@ -2116,7 +2116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('mobject_env': venv)",
+   "display_name": ".venv11",
    "language": "python",
    "name": "python3"
   },
@@ -2130,11 +2130,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
-    "hash": "de09033afffa3f5a46031dc5f1d6210cdd3d8c3b3fb8f394fa15c15d80f85f8a"
+    "hash": "4f2da1240e0bd584740c51555f65b4a6360ecf1e20d5e328709c04764f187336"
    }
   }
  },
