--- a/gallery.ipynb
+++ b/gallery.ipynb
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Plywood Gallery v0.0.11\n",
-      "This path and all its child elements will be removed:/Users/jan-hendrik/projects/mobject-gallery/gallery_assets\n",
-      "Deleted '/Users/jan-hendrik/projects/mobject-gallery/gallery_assets' and all containing files and folder.\n",
-      "Successfully created /Users/jan-hendrik/projects/mobject-gallery/gallery_assets/gallery_parameters.json!🦫\n"
+      "This path and all its child elements will be removed:/Users/jan-hendrik/projects/all_plywood_galleries/mobject-gallery/gallery_assets\n",
+      "Deleted '/Users/jan-hendrik/projects/all_plywood_galleries/mobject-gallery/gallery_assets' and all containing files and folder.\n",
+      "Successfully created /Users/jan-hendrik/projects/all_plywood_galleries/mobject-gallery/gallery_assets/gallery_parameters.json!🦫\n"
      ]
     }
    ],
@@ -2035,24 +2035,31 @@
     }
    ],
    "source": [
-    "%%capture_png -p Light_change_default.png --celltype Normal --style \"width:80px\"\n",
+    "%%capture_png -p Light_mode.png --celltype Normal --style \"width:80px\"\n",
     "%%manim $params\n",
     "\n",
-    "\n",
+    "config.background_color = WHITE\n",
+    "Text.set_default(color=BLACK)\n",
+    "Line.set_default(color=YELLOW)\n",
+    "Line.set_default(stroke_width=20)\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
-    "        self.camera.background_color = WHITE  # HEREFROM\n",
-    "        Text.set_default(color=BLACK)\n",
-    "        Line.set_default(color=YELLOW)\n",
-    "        Line.set_default(stroke_width=20)\n",
-    "\n",
+    "        # self.camera.background_color = WHITE  # alternative way.\n",
     "        mob = Text(\"Light Mode\")\n",
     "        l = Line(2 * LEFT, 2 * RIGHT).next_to(mob, DOWN)\n",
     "        self.add(mob, l)\n",
-    "\n",
     "        Line.set_default()\n",
-    "        Text.set_default()  # HERETO\n",
+    "        Text.set_default()\n",
     "        self.camera.frame.scale(1 / 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config.background_color = BLACK"
    ]
   },
   {
@@ -2065,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2187,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2215,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2246,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2502,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2587,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2668,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2707,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2859,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2888,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2935,7 +2942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2982,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3074,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3120,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3209,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3266,7 +3273,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "4f2da1240e0bd584740c51555f65b4a6360ecf1e20d5e328709c04764f187336"
+    "hash": "f218556be0a20762f65e7abb3cdb7fef2249cccfce82d92ef1ee9b66d723adfc"
    }
   }
  },
