--- a/html_build.ipynb
+++ b/html_build.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plywood Gallery v0.0.12\n",
+      "Successfully read gallery_config.yaml\n",
+      "Successfully created index.html\n",
+      "Now you can start crafting your examples with the file gallery.ipynb and see the results in `index.html`!🚪 \n",
+      "Just opening index.html in the browser won't load the interactive parts, so better use `from plywood_gallery import open_webpage; open_webpage()` or in VS Code select 'Live Preview: Show Preview' in VSCode to start the page with a server\n"
+     ]
+    }
+   ],
    "source": [
     "from plywood_gallery import generate_html\n",
     "generate_html(yaml_file=\"gallery_config.yaml\", html_file=\"index.html\")"
@@ -29,11 +41,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2952ffede85d5ee814e7d7d53bb189c2d6659c3837bb58400800b4ce3939b697"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('plywood_gallery_env': venv)",
+   "display_name": ".venv11",
    "language": "python",
    "name": "python3"
   },
@@ -47,9 +56,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f218556be0a20762f65e7abb3cdb7fef2249cccfce82d92ef1ee9b66d723adfc"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
